# acquisition

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  AGENTS.md  BUILD.md  CMakeLists.txt  CONTRIBUTORS.md  README.md  acquisition.desktop  acquisition.pro  cov-build-win.cmd  deploy instructions.txt  deploy-linux.sh  deploy-mac.sh  deploy-win.cmd  deploy-win.sh  deploy.cmd  deploy.ps1  doxygen_config  installer.iss  network_info.h  resources.qrc  version_info.rc.in
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  cmake-multi-platform.yml  codeql.yml  manual.yml  sanitizers.yml
cmake/: filters_boundary_check.cmake
doc/html/: annotated.html  annotated_dup.js  application_8cpp.html  application_8cpp__incl.map  application_8cpp__incl.md5  application_8cpp_source.html  application_8h.html  application_8h__dep__incl.map  application_8h__dep__incl.md5  application_8h__incl.map  application_8h__incl.md5  application_8h_source.html  autoonline_8cpp.html  autoonline_8cpp.js  autoonline_8cpp__incl.map  autoonline_8cpp__incl.md5  autoonline_8cpp_source.html  autoonline_8h.html  autoonline_8h__dep__incl.map  autoonline_8h__dep__incl.md5  autoonline_8h__incl.map  autoonline_8h__incl.md5  autoonline_8h_source.html  bucket_8cpp.html  bucket_8cpp__incl.map  bucket_8cpp__incl.md5  bucket_8cpp_source.html  bucket_8h.html  bucket_8h__dep__incl.map  bucket_8h__dep__incl.md5  bucket_8h__incl.map  bucket_8h__incl.md5  bucket_8h_source.html  buyoutmanager_8cpp.html  buyoutmanager_8cpp__incl.map  buyoutmanager_8cpp__incl.md5  buyoutmanager_8cpp_source.html  buyoutmanager_8h.html  buyoutmanager_8h.js  buyoutmanager_8h__dep__incl.map  (+1739 more)
docs/: README.md
docs/adr/: 0001-qml-ui-migration-strategy.md  0002-defer-qml-migration.md
docs/cleanup/: findings.md  phase-0-test-harness.md  phase-1-layering.md  phase-2-worker-threading.md  phase-3-model-signals.md  phase-4-search-decoupling.md  phase-5-filters-as-data.md  phase-6-mainwindow-slimming.md  plan.md
docs/design/: items-pipeline.md  network-ggg-email-draft.md  network-ground-truth.md  network-redesign-phase5-handoff.md  network-redesign-phase5-plan.md  network-redesign-phase5-verification.md  network-redesign-reviews.md  network-redesign.md  phase5e-lsan-session-a.md  phase5e-lsan-session-b.md
forms/: logindialog.ui  mainwindow.ui
resources/: resources.qrc
spikes/qcoro/: CMakeLists.txt  README.md  batch.cpp  main.cpp
src/: application.cpp  application.h  autoonline.cpp  autoonline.h  bucket.cpp  bucket.h  buyout.cpp  buyout.h  buyouthelper.cpp  buyouthelper.h  buyouthelperprivate.cpp  buyouthelperprivate.h  buyoutimporter.cpp  buyoutimporter.h  buyoutmanager.cpp  buyoutmanager.h  checkmsvc.cpp  checkmsvc.h  column.cpp  column.h  crashpad.cpp  crashpad.h  currency.cpp  currency.h  currencymanager.cpp  currencymanager.h  datastore.cpp  datastore.h  fatalerror.cpp  fatalerror.h  filesystem.cpp  filesystem.h  filters.cpp  filters.h  flowlayout.cpp  flowlayout.h  imagecache.cpp  imagecache.h  influence.cpp  influence.h  (+86 more)
src/acquisition/: CMakeLists.txt
src/acquisition/acquisition/: application.cpp  application.h  buyout.h  checkmsvc.h  crashpad.cpp  crashpad.h  currency.h  currencymanager.h  datastore.cpp  datastore.h  filters.cpp  filters.h  imagecache.h  influence.cpp  influence.h  items_model.cpp  itemsmanager.h  logpanel.cpp  main.cpp  memorydatastore.h  modsfilter.cpp  oauthmanager.cpp  ratelimitdialog.h  ratelimiter.cpp  ratelimiter.h  ratelimitmanager.h  replytimeout.h  repoe.cpp  search.cpp  search.h  searchcombobox.cpp  shop.cpp  shop.h  sqlitedatastore.cpp  sqlitedatastore.h  updatechecker.cpp  updatechecker.h  util.cpp  verticalscrollarea.cpp
src/acquisition/test/: testdata.cpp  testdata.h  testitem.cpp  testitemsmanager.cpp  testitemsmanager.h  testmain.cpp  testmain.h  testshop.cpp  testshop.h  testutil.cpp  testutil.h
src/app/: coreservices.cpp  coreservices.h  sessioncontext.cpp  sessioncontext.h  sessionservices.cpp  sessionservices.h  setting.cpp  setting.h  usersettings.cpp  usersettings.h
src/datastore/: buyoutrepo.cpp  buyoutrepo.h  buyoutstore.cpp  buyoutstore.h  characterrepo.cpp  characterrepo.h  characterstore.cpp  characterstore.h  datastore.cpp  datastore.h  datastore_utils.cpp  datastore_utils.h  keychainstore.cpp  keychainstore.h  memorydatastore.cpp  memorydatastore.h  sessionstore.cpp  sessionstore.h  sqlitedatastore.cpp  sqlitedatastore.h  stashrepo.cpp  stashrepo.h  stashstore.cpp  stashstore.h  userstore.cpp  userstore.h
src/filters/: filtermatchers.cpp  filtermatchers.h  filterspec.cpp  filterspec.h  filterstate.cpp  filterstate.h
src/legacy/: legacybuyout.h  legacybuyoutvalidator.cpp  legacybuyoutvalidator.h  legacycharacter.h  legacycurrency.h  legacydatastore.cpp  legacydatastore.h  legacyfolderimporter.cpp  legacyfolderimporter.h  legacyitem.cpp  legacyitem.h  legacyitemlocation.h  legacystash.h
src/libacq-core/: CMakeLists.txt
src/poe/: poe_utils.cpp  poe_utils.h  poeapiclient.cpp  poeapiclient.h  tradestats.h
src/poe_api/: poe_account.h  poe_character.cpp  poe_character.h  poe_crucible.h  poe_filter.h  poe_item.h  poe_ladder.h  poe_league.cpp  poe_league.h  poe_league_account.h  poe_passives.h  poe_pvp.h  (+4 more)
test/: testdata.cpp  testdata.h  testitem.cpp  testitem.h  testitemsmanager.cpp  testitemsmanager.h  testmain.cpp  testmain.h  testsettings.cpp  testsettings.h  testshop.cpp  testshop.h  testutil.cpp  testutil.h
tests/: CMakeLists.txt  fakeapiclient.h  fakenetwork.h  fakenetworkmanager.h  fakescheduler.h  fakesender.h  lsan.supp  mainwindowfixture.h  testfixtures.h  tst_buyout.cpp  tst_buyoutmanager.cpp  tst_filters.cpp  tst_gate.cpp  tst_itemlocation.cpp  tst_itemsmodel.cpp  tst_itemtooltiptext.cpp  tst_mainwindow.cpp  tst_networkcapture.cpp  tst_poeapiclient.cpp  tst_ratelimiter.cpp  tst_ratelimitmanager.cpp  tst_ratelimitpolicy.cpp  tst_reconcile.cpp  tst_search.cpp  tst_searchform.cpp  tst_shop.cpp  tst_stopsleep.cpp  tst_timerscheduler.cpp  tst_workerintegration.cpp  tst_workerparse.cpp  tst_workerupdate.cpp  workertestaccess.h
(+268 files in other folders)
